--- a/src/main/resources/se_prototype/se_prototype/message.fxml
+++ b/src/main/resources/se_prototype/se_prototype/message.fxml
@@ -12,13 +12,14 @@
             fx:controller="se_prototype.se_prototype.MessageController"
             prefHeight="600.0" prefWidth="400.0"
             style="-fx-background-color: #F5F5F5;">
+
     <!-- Top Section -->
     <top>
         <HBox spacing="10" alignment="CENTER_LEFT" style="-fx-padding: 10; -fx-background-color: white; -fx-border-color: #CCCCCC;">
             <Button fx:id="backButton" style="-fx-background-color: transparent; -fx-padding: 0;">
-                <ImageView fitWidth="30" fitHeight="30" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@backIcon.png"/>
-                </ImageView>
+                <graphic>
+                    <ImageView fx:id="backArrowImage" fitWidth="30" fitHeight="30"/>
+                </graphic>
             </Button>
             <Label text="Message" style="-fx-font-size: 20; -fx-text-fill: #1E1E1E; -fx-font-weight: bold;"/>
         </HBox>
@@ -26,30 +27,26 @@
 
     <!-- Center Section -->
     <center>
-        <ScrollPane fitToWidth="true" style="-fx-background-color: transparent;" fx:id="scrollPane">
-            <VBox fx:id="chatContainer" spacing="10" style="-fx-padding: 10;"/>
-        </ScrollPane>
+        <VBox spacing="10" style="-fx-padding: 10;">
+            <ScrollPane fx:id="scrollPane" fitToWidth="true" style="-fx-background-color: transparent;" vbarPolicy="ALWAYS">
+                <VBox fx:id="chatContainer" spacing="10" style="-fx-padding: 10;" alignment="BOTTOM_LEFT"/>
+            </ScrollPane>
+
+            <!-- Message Input Area -->
+            <HBox spacing="10" alignment="CENTER" style="-fx-padding: 10;">
+                <TextField fx:id="messageField" promptText="Write Message" style="-fx-pref-width: 250;"/>
+                <Button fx:id="sendButton" text="Send" style="-fx-background-color: #1ABC9C; -fx-text-fill: white;"/>
+            </HBox>
+        </VBox>
     </center>
 
     <!-- Bottom Section -->
     <bottom>
-        <HBox spacing="10" alignment="CENTER" style="-fx-padding: 10; -fx-background-color: white;">
-            <TextField fx:id="messageField" promptText="Write Message" style="-fx-background-radius: 20; -fx-border-radius: 20; -fx-border-color: #CCCCCC;"/>
-            <Button style="-fx-background-color: transparent; -fx-padding: 0;">
-                <ImageView fitWidth="25" fitHeight="25" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@cameraIcon.png"/>
-                </ImageView>
-            </Button>
-            <Button style="-fx-background-color: transparent; -fx-padding: 0;">
-                <ImageView fitWidth="25" fitHeight="25" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@attachmentIcon.png"/>
-                </ImageView>
-            </Button>
-            <Button fx:id="sendButton" style="-fx-background-color: #5EC401; -fx-background-radius: 50;">
-                <ImageView fitWidth="25" fitHeight="25" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@sendIcon.png"/>
-                </ImageView>
-            </Button>
+        <HBox alignment="CENTER" spacing="70" prefHeight="50" style="-fx-background-color: #FFFFFF; -fx-padding: 10;">
+            <Button fx:id="homeButton" style="-fx-background-color: transparent; -fx-padding: 0;"/>
+            <Button fx:id="menuButton" style="-fx-background-color: transparent; -fx-padding: 0;"/>
+            <Button fx:id="cartButton" style="-fx-background-color: transparent; -fx-padding: 0;"/>
+            <Button fx:id="settingsButton" style="-fx-background-color: transparent; -fx-padding: 0;"/>
         </HBox>
     </bottom>
 </BorderPane>
